--- a/SASmarkdown.rmd
+++ b/SASmarkdown.rmd
@@ -2,25 +2,14 @@
 title: "SAS Using R Markdown (Windows)"
 author: "Doug Hemken"
 date: "May 2017"
-output:
-  html_document:
-    highlight: null
-    self_contained: no
-    theme: null
-    toc: yes
-  pdf_document:
-    toc: yes
 ---
 
+[Writing SAS Documentation index](../sas.html#writing-sas-documentation)
+[SAS workshop notes](../sas.html)
 
-```{r}
-  require(SASmarkdown)
+```{r, echo=FALSE}
   backtick <- "`"
-  engine_output <- sasengine_output()
-  sashtmlengine()
-  saslogengine()
-  sas_collectcode()
-  source("./R/SasMDsetup.r")
+  source("../SasMDsetup.r")
 ```
 
 ## Introduction
@@ -42,7 +31,9 @@ The source for **this** document is [SASmarkdown.rmd](SASmarkdown.rmd)
 
 ## Background
 *Markdown* is a language for formatting fairly simple documents using 
-just a few text symbols.  It is designed to be easy to read and write. If 
+just a few text symbols.  It is designed to be easy to read and write. 
+You may already be using Markdown (in email, for instance) and not
+even realize it - it\'s that simple!  If 
 you are not already familiar with Markdown see John Gruber\'s
 [Markdown article](https://daringfireball.net/projects/markdown/). 
 
@@ -53,7 +44,7 @@ more about the details of R Markdown see RStudio\'s
 [R Markdown webpages](http://rmarkdown.rstudio.com/lesson-1.html)
 
 *RStudio* uses an R package called `knitr` (this could also be called
-directly from R), which includes the ability to evaluate SAS code.  We
+directly from R code), which includes the ability to evaluate SAS code.  We
 will refine this in subsequent articles.
 
 The documentation for `knitr` can be found in R\'s Help, from 
@@ -80,7 +71,7 @@ your documentation!
 ## Including Your SAS Code
 SAS code is included in your R Markdown document in a block called
 a \"code chunk\".  When you click on Rstudio\'s Knit button, your 
-initial document, what you actually write out,
+initial document, what you actually wrote out,
 is processed by the R function `knitr`, evaluating your code, collecting
 the output, and producing a Markdown document. This Markdown document
 is then processed by a program called *Pandoc* to produce your final
@@ -90,7 +81,7 @@ It helps to understand how knitr evaluates your SAS code.  Knitr writes
 out your code into a file, and then submits that file to SAS to be
 run in batch mode.  This produces SAS log and SAS \"listing\" output.
 The listing output is then read back into knitr and used to produce
-an block of output in the Markdown document.  (These files are all
+a block of output in the Markdown document.  (These files are all
 temporary.)
 
 ### Basic Limitations
@@ -119,7 +110,9 @@ can be overcome with the strategic use of a SAS autoexec file (which
 we automate in [another article](SASmdlinkcode.html)) or
 by echoing only part of the code through the `echo` code chunk option.
 
-* If you want to use SAS\'s html output instead of the listing
+* Although text output is simple to use, other types of output
+require more thought.  If you want to use SAS\'s html output 
+instead of the listing
 output, or if you want to include SAS graphics in your final document,
 a different version of knitr\'s SAS engine makes this fairly simple
 (again, a topic for [another article](SAShtmlengine.html)).
@@ -139,22 +132,26 @@ in pdf documents, you will want to investigate SAS\'s
 or Lenth\'s [SASWeave](http://homepage.cs.uiowa.edu/~rlenth/SASweave/).
 
 ### File locations
-Because I am running this on my office (SSCC) desktop and on Winstat,
-everything goes on the Z: drive.  As long as I specify
-the root of Z: in the `engine.opts`, both
-R Markdown and SAS default to the folder where the
-markdown file is saved.  
+Both R and SAS need to be able to read and write files in a shared
+location.  This is simplest when your R Markdown file is located
+in the directory where you want your final document to be written,
+and all other files used by both R and SAS (like graphics files)
+are also in that directory.
 
-(I don\'t have this fully worked out for non-SSCC scenarios.
-If you are working
-in another environment, you will have to be more careful about
-where SAS writes its output files, and where R looks for them.)
+Files used solely by R (I have some setup and style files I use) could
+be located anywhere, they only have to be specified in your R code.
+Likewise, files used solely by SAS (pehaps data or formats) could be
+located anywhere, and they are addressed the usual way in your SAS code.
 
-(Also keep in mind that for the Windows OS, SAS will use backslashes
-in file paths, while R will use forward slashes.  Note in the **code
-chunk** options below we are specifying paths to R, so use forward slashes.)
+Also keep in mind that for the Windows OS, SAS will use backslashes
+in file paths, while R will use forward slashes.  Note in the code
+chunk **options** below we are specifying paths to R, so use forward slashes.)
 
-### Code Setup
+Other file arrangements are possible - perhaps all your graphics in 
+a \"graphics\" folder - just keep in mind that you\'ll need to specify
+alternate locations to both R and SAS.
+
+### Code Chunk Setup
 The code chunk setup to run SAS is not too difficult.  But as long as 
 SAS is
 not in your operating system\'s `PATH` variable, you need to specify its
@@ -166,12 +163,12 @@ full path with the `engine.path` option (all on one line), e.g.
     
     `r backtick```
 
+(This is a little awkward to show you, because the code chunk setup, the
+part in curly braces, must all be on one line.)
 You will also want to add an `engine.opts` option, so that SAS will
-save the listing output (and the log) to a location where R will handle
-it gracefully, including it in the final document automatically and
-deleting the SAS output file when finished, e.g.
+produce output with reasonable line lengths.
 
-    `r backtick```{r, engine='sas', engine.path="C:/Program Files/SASHome/SASFoundation/9.4/sas.exe", engine.opts="-nosplash -log 'z:' -print 'Z:'", comment=""}
+    `r backtick```{r, engine='sas', engine.path="C:/Program Files/SASHome/SASFoundation/9.4/sas.exe", engine.opts="-nosplash -linesize 75", comment=""}
     
     -- SAS code here --
     
@@ -182,7 +179,7 @@ code chunk in R as
 
     `r backtick```{r}
     saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
-    sasopts <- "-nosplash -log 'z:' -print 'Z:' -ls 75"
+    sasopts <- "-nosplash -ls 75"
     `r backtick```
 
     `r backtick```{r, engine='sas', engine.path=saspath, engine.opts=sasopts, comment=""}
@@ -198,7 +195,7 @@ options as defaults:
     `r backtick```{r, message=FALSE}
     require(knitr)
     saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
-    sasopts <- "-nosplash -log 'z:' -print 'Z:' -ls 75"
+    sasopts <- "-nosplash -ls 75"
     opts_chunk$set(engine="sas", engine.path=saspath, 
         engine.opts=sasopts, comment="")
     `r backtick```
@@ -210,7 +207,7 @@ options as defaults:
     `r backtick```
 
 ## Running SAS
-Here then, is an example as it might appear in your final document.
+Here then, is a simple example as it might appear in your final document.
 ```{r, engine='sas', engine.path=saspath, engine.opts=sasopts, comment=""}
 proc means data=sashelp.class;
 run;
