--- a/vignettes/test.rmd
+++ b/vignettes/test.rmd
@@ -1,16 +1,15 @@
 ---
 title: "A Test of SASmarkdown"
-author: "Ken Kleinman"
-date: "May 19, 2017"
+author: "Doug Hemken and Ken Kleinman"
+date: "May 23, 2017"
 output: html_document
 ---
 
-## In a first code chunk set up with
+## In a first code chunk, set up the SAS engines.
 ```{r}
 require(SASmarkdown)
-sashtmlengine()
-saslogengine()
-# engine_output <- sasengine_output()
+sas_enginesetup(sashtml=sashtml)
+sas_enginesetup(saslog=saslog)
 
 if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
   saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
@@ -22,22 +21,22 @@ if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
 sasopts <- "-nosplash -ls 75"
 
 ```
-## Then set up SAS code chunks with
+## Then set up SAS code chunks.
 ```{r example1, engine="sas", engine.path=saspath, engine.opts=sasopts, comment=""}
 proc means data=sashelp.class (keep = age);
 run;
 ```
-## Rerun with html output
+## Rerun with html output.
 ```{r example2, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment="", echo=FALSE}
 proc means data=sashelp.class (keep = age);
 run;
 ```
-## Run an html example with graphics
-```{r example3, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment="", results="asis"}
+## Run an html example with graphics.
+```{r example3, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment=""}
 proc corr data=sashelp.class nosimple plots=matrix;
 run;
 ```
-## And finally a log example
+## And finally a log example.
 ```{r example4, engine="saslog", engine.path=saspath, engine.opts=sasopts, comment=""}
 proc means data=sashelp.class (keep = age);
 run;
