--- a/tests/SASloghooktest.rmd
+++ b/tests/SASloghooktest.rmd
@@ -21,7 +21,7 @@ In addition to the usual set up code for working with SAS (the \"sas\" or
 ```{r outputhook, message=FALSE}
   # require(SASmarkdown)
   hook_orig <- knitr::knit_hooks$get("output")
-  knitr::knit_hooks$set(output = SASmarkdown::loghook)
+  knitr::knit_hooks$set(output = SASmarkdown::sasloghook)
 ```
 
 Note that **all** R output is run through the output hook, but our alterations
@@ -74,7 +74,7 @@ displayed. (Notice we reset the \"output\" hook, from above.)
 knitr::knit_hooks$set(output=hook_orig)
 
 hook_orig <- knitr::knit_hooks$get("source")
-knitr::knit_hooks$set(source = loghook)
+knitr::knit_hooks$set(source = sasloghook)
 ```
 
 ### Hook Use
