--- a/vignettes/test.rmd
+++ b/vignettes/test.rmd
@@ -1,16 +1,13 @@
 ---
 title: "A Test of SASmarkdown"
 author: "Doug Hemken and Ken Kleinman"
-date: "May 24, 2017"
+date: "May 25, 2017"
 output: html_document
 ---
 
-## In a first code chunk, set up the SAS engines.
-```{r}
+## In a first code chunk, set up typical SAS engine configuration.
+```{r setup, message=FALSE}
 require(SASmarkdown)
-# sas_enginesetup(sashtml=sashtml)
-# sas_enginesetup(saslog=saslog)
-sas_enginesetup(sashtml=sashtml, saslog=saslog)
 
 if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
   saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
@@ -19,6 +16,7 @@ if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
 } else {
   saspath <- "sas"
 }
+
 sasopts <- "-nosplash -ls 75"
 
 ```
