More vignettes moved

--- a/inst/doc/basicuse.rmd
+++ b/inst/doc/basicuse.rmd
@@ -4,7 +4,7 @@ author: "Doug Hemken"
 date: "`r format(Sys.Date(), '%d %b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Put the title of your vignette here}
+  %\VignetteIndexEntry{Basic Use of SASmarkdown}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
