All examples moved to vignettes

--- a/inst/doc/collectcode.rmd
+++ b/inst/doc/collectcode.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Linking Code Chunks Using Collectcode"
+title: "Linking Code Chunks Using 'collectcode'"
 author: "Doug Hemken"
 date: "`r format(Sys.Date(), '%d %b %Y')`"
 output: rmarkdown::html_vignette
@@ -27,7 +27,7 @@ sasopts <- "-nosplash -ls 75"
 ```
 ## Then set up SAS code chunks.
 ```{r datastep, engine="sas", collectcode=TRUE, engine.path=saspath, engine.opts=sasopts, comment=""}
-data class;
+data class; * collectcode;
     set sashelp.class;
     keep age;
     run;
