--- a/vignettes/SASloghooks.rmd
+++ b/vignettes/SASloghooks.rmd
@@ -1,115 +1,152 @@
 ---
 title: "Cleaning Up SAS Log Output"
 author: "Doug Hemken"
-date: "`r format(Sys.Date(), '%d %b %Y')`"
+date: "`r format(Sys.Date(), '%b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Cleaning Up SAS Log Output}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
+```{r backtick, echo=FALSE, results="hide"}
+backtick <- "`"
+```
 
-## An Output Hook for PROC PRINTTO
-In this example I am using the PROC PRINTTO method of capturing the log.
-In this approach, we use SAS code to save a log file.  In a separate code
-chunk we use R code to read this log file and place it in our document.
-
-```{r setup, echo=FALSE}
+```{r setup, echo=FALSE, message=FALSE}
+require(SASmarkdown)
 if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
   saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
-} else if (file.exists("D:/SASHome/SASFoundation/9.4/sas.exe")) {
-  saspath <- "D:/SASHome/SASFoundation/9.4/sas.exe"
 } else {
   saspath <- "sas"
 }
-
 sasopts <- "-nosplash -ls 75"
-  knitr::opts_chunk$set(engine.path=saspath, engine.opts=sasopts, comment="")
+knitr::opts_chunk$set(engine.path=saspath, engine.opts=sasopts, comment="")
 ```
 
-In addition to the usual set up code for working with SAS (the \"sas\" or
-\"sashtml\" engines), we need to define an *output* hook.
-```{r outputhook, message=FALSE}
-  require(SASmarkdown)
-  saslog_hookset("output")
+If you are using the **saslog** or **sashtmllog** engines, or if you
+are allowing SAS semantic errors to appear in your document, you may
+not want to show the entire log file.  To gain some control over
+what shows up in your document, you can use \"saslog_hookset\".
+
+The usual SAS set up is needed, as in other vignettes, and is not
+shown here.
+
+## A Source Hook for the \"saslog\" Engine
+With the **saslog** or **sashtmllog** engines we use the 
+\"saslog_hookset\" function, specifying  
+a *source* hook.  This creates a number of chunk options we can
+use to filter the SAS log.
+
+### Hook Specification
+(This is a \"source\" hook, because we are showing the SAS log
+where we usually show the SAS code, the \"source\".)
+```{r sourcehook}
+require(SASmarkdown) # if not invoked previously
+saslog_hookset("source")
 ```
 
-Note that **all** R output is run through the output hook, but our alterations
-are specific to the SAS log (none of the things we are searching for
-and removing appear in R output), so SAS output is untouched.
+### Hook Use
+First, we setup some code using \"engine=\'sas\'\".  We will
+repeatedly use the same code by repeating the chunk label.
+```{r procmeans2, engine='sas'}
+proc means data=sashelp.class(keep=height);
+run;
+```
+
+If we switch to engine **saslog**
+
+    `r backtick```{r procmeans2, engine='saslog'}
+    `r backtick```
+
+we don't get ALL of the SAS log file, but we may be showing
+more information than we really want to present to the reader.
+```{r procmeans2, engine='saslog'}
+```
+
+We can filter the log to suppress processing times by 
+using chunk option \"SASproctime=FALSE\".
+
+    `r backtick```{r procmeans2, engine='saslog', SASproctime=FALSE, results='hide'}
+    `r backtick```
+
+```{r procmeans2, engine='saslog', SASproctime=FALSE, results='hide'}
+```
+
+Other filtering options include no SAS command echo with
+\"SASecho=FALSE\" and no SAS NOTES with \"SASnotes=FALSE\".
+
+```{r procmeans2, engine='saslog', SASecho=FALSE, results="hide"}
+```
+
+```{r procmeans2, engine='saslog', SASnotes=FALSE, results="hide"}
+```
+
+### Interactions (or Lack Thereof)
+Chunks in other languages are unaffected (for example, R).
+```{r sourcetest1}
+runif(5)
+```
+
+And the **sas** and **sashtml** engines are unaffected, as seen
+in our intial code chunk and here:
+```{r procmeans2, engine='sashtml'}
+```
+
+## An Output Hook for PROC PRINTTO
+These same filters can be used as \"output\" hooks.  
+
+Suppose you
+wanted to process SAS log files separately.  You could use
+SAS\'s PROC PRINTTO to save the log files, and read them
+into your document using R commands.
+
+(For this vignette we reset the \"source\" hook, from above.  In
+general you will NOT need to reset, you will use one or the other.)
+```{r outputhook, echo=TRUE}
+knitr::knit_hooks$set(source=hook_orig) # just for this example
+
+saslog_hookset("output")
+```
+
+In this example I am using the PROC PRINTTO method of capturing the log.
+
+Note that **all** output is run through the output hook, but our alterations
+are specific to the SAS log  None of the text we are filtering appears
+in ordinary SAS or R output, so SAS output is untouched.
 
 ```{r procmeans, engine='sas'}
 proc printto log="saslog.log" new;
-proc means data=sashelp.class;
+proc means data=sashelp.class(keep=weight);
 run;
 ```
 
 The log is then processed when it is shown by a separate code chunk (using
 R commands, not SAS).
+
+    `r backtick```{r readlog}
+    cat(readLines("saslog.log"), sep="\n")
+    `r backtick```
+
 ```{r readlog}
 cat(readLines("saslog.log"), sep="\n")
 ```
 
-Some variations.  No processing times, SASproctime=FALSE.
+We can now use the same chunk options as before.  
+No processing times, SASproctime=FALSE.
 ```{r readlog, SASproctime=FALSE, echo=FALSE}
 ```
 
-Some variations.  No SAS command echo, SASecho=FALSE.
+No SAS command echo, SASecho=FALSE.
 ```{r readlog, SASecho=FALSE, echo=FALSE}
 ```
 
-Some variations.  No SAS NOTES, SASnotes=FALSE.
+No SAS NOTES, SASnotes=FALSE.
 ```{r readlog, SASnotes=FALSE, echo=FALSE}
 ```
 
-Clean up.
+Clean up is necessary in a final R chunk - this is NOT automated.
 ```{r cleanuplog}
 # Do not forget to remove the log file when you are done!
 unlink("saslog.log")
 ```
 
-## A Source Hook for the \"saslog\" Engine
-with the \"saslog\" engine, we would need to use the same function as 
-a *source* hook.  Again, the usual SAS set up is needed, as above.
-```{r enginesetup}
-# require(SASmarkdown)
-# sas_enginesetup(saslog=saslog)
-```
-
-### Hook Specification
-Next we redefine how \"source\" is
-displayed. (Notice we reset the \"output\" hook, from above.  In
-general you will NOT need to reset, you will use one or the other.)
-```{r sourcehook, echo=TRUE}
-knitr::knit_hooks$set(output=hook_orig) # just for this example
-
-saslog_hookset("source")
-```
-
-### Hook Use
-First, the code.
-```{r procmeans2, engine='sas'}
-proc means data=sashelp.class;
-run;
-```
-
-And in use.  (Notice there is no file to clean up.)
-(There is also no code echo for PROC PRINTTO.)
-```{r procmeans2, engine='saslog'}
-```
-
-And a variation on the log, no processing times, SASproctime=FALSE.
-```{r procmeans2, engine='saslog', SASproctime=FALSE, results='hide'}
-```
-
-### Interactions (or Lack Thereof)
-Chunks in other languages are unaffected.
-```{r sourcetest1}
-runif(5)
-```
-
-and, with the \"sas\" engine.
-```{r sourcetest2, engine='sas'}
-proc means data=sashelp.class;
-run;
-```
