--- a/vignettes/collectcode.rmd
+++ b/vignettes/collectcode.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Linking Code Chunks Using 'sas_collectcode'"
 author: "Doug Hemken"
-date: "`r format(Sys.Date(), '%d %b %Y')`"
+date: "`r format(Sys.Date(), '%b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Linking Code Chunks Using sas_collectcode}
