--- a/vignettes/saserrors.rmd
+++ b/vignettes/saserrors.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Showing of SAS errors"
 author: "Doug Hemken"
-date: "`r format(Sys.Date(), '%d %b %Y')`"
+date: "`r format(Sys.Date(), '%b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Showing of SAS errors}
