--- a/vignettes/saserrors.rmd
+++ b/vignettes/saserrors.rmd
@@ -5,7 +5,7 @@ date: "`r format(Sys.Date(), '%b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Showing of SAS errors}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{knitr::rmarkdown_notangle}
   \usepackage[utf8]{inputenc}
 ---
 ```{r backtick, echo=FALSE, results="hide"}
