--- a/vignettes/basicuse.rmd
+++ b/vignettes/basicuse.rmd
@@ -6,10 +6,10 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Basic Use of SASmarkdown}
   %\VignetteEngine{knitr::rmarkdown_notangle}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
 
-```{r backtick, echo=FALSE, results="hide"}
+```{r backtick, include=FALSE}
 backtick <- "`"
 ```
 This discussion assumes you already have a basic understanding
@@ -21,27 +21,26 @@ This depends on your operating system, the version of SAS, and
 whether or not you have SAS installed in the default location.
 This example catches both Windows and linux SAS for me.
 ```{r setup, message=FALSE}
-require(SASmarkdown)
+library(SASmarkdown)
 
-if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
-  saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
-} else {
-  saspath <- "sas"
-}
-
+saspath <- find_sas()
 sasopts <- "-nosplash -ls 75"
+
+knitr::opts_chunk$set(engine.path=list(sas=saspath, sashtml=saspath, saslog=saspath, sashtmllog=saspath),
+                      engine.opts=list(sas=sasopts, sashtml=sasopts, saslog=sasopts, sashtmllog=sasopts),
+                      comment=NA)
 
 ```
 ## Then set up SAS code chunks.
 A simple code chunk in Rmarkdown might look like:
 
-    `r backtick```{r example1, engine="sas", engine.path=saspath, engine.opts=sasopts, comment=""}
+    `r backtick```{sas example1}
     proc means data=sashelp.class (keep = age);
     run;
     `r backtick```
 
 And in your document this would produce:
-```{r example1, engine="sas", engine.path=saspath, engine.opts=sasopts, comment=""}
+```{sas example1}
 proc means data=sashelp.class (keep = age);
 run;
 ```
@@ -52,23 +51,23 @@ This example also reuses the
 previous code chunk by using the same chunk label, \"example1\", and
 suppresses the code echo with the \"echo=FALSE\" chunk option.
 
-    `r backtick```{r example1, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment="", echo=FALSE}
+    `r backtick```{sashtml example1, echo=FALSE}
     `r backtick```
 
 Which produces:
-```{r example1, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment="", echo=FALSE}
+```{sashtml example1, echo=FALSE}
 ```
 ## Run an HTML example with graphics.
 If you use the \"sashtml\" engine, nothing special is required to
 include SAS ODS graphics.
 
-    `r backtick```{r example2, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment=""}
+    `r backtick```{sashtml example2}
     proc corr data=sashelp.class nosimple plots=matrix;
     run;
     `r backtick```
 
 Producing:
-```{r example2, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment=""}
+```{sashtml example2}
 proc corr data=sashelp.class nosimple plots=matrix;
 run;
 ```
@@ -76,20 +75,20 @@ run;
 We can repeat the first example, showing the SAS log instead of
 the SAS code by using the **saslog** engine.
 
-    `r backtick```{r example1, engine="saslog", engine.path=saspath, engine.opts=sasopts, comment=""}
+    `r backtick```{saslog example1}
     `r backtick```
 
 Producing:
-```{r example1, engine="saslog", engine.path=saspath, engine.opts=sasopts, comment=""}
+```{saslog example1}
 ```
 ## Repeat with both log and html output.
 Finally, you can have both the SAS log and the HTML output with
 the **sashtmllog** engine.
 
-    `r backtick```{r example1, engine="sashtmllog", engine.path=saspath, engine.opts=sasopts, comment=""}
+    `r backtick```{sashtmllog example1}
     `r backtick```
 
 Producing:
-```{r example1, engine="sashtmllog", engine.path=saspath, engine.opts=sasopts, comment=""}
+```{sashtmllog example1}
 ```
 
