--- a/vignettes/saserrors.rmd
+++ b/vignettes/saserrors.rmd
@@ -1,14 +1,14 @@
 ---
-title: "Showing of SAS errors"
+title: "Showing SAS errors"
 author: "Doug Hemken"
 date: "`r format(Sys.Date(), '%b %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Showing of SAS errors}
+  %\VignetteIndexEntry{Showing SAS errors}
   %\VignetteEngine{knitr::rmarkdown_notangle}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
-```{r backtick, echo=FALSE, results="hide"}
+```{r backtick, include=FALSE}
 backtick <- "`"
 ```
 # To see SAS errors, use chunk option \"error=TRUE\".
@@ -17,14 +17,14 @@ when it does, you should see the log in your document instead of the code.
 
 ## First, set up your SAS engine configuration.
 ```{r setup, message=FALSE}
-require(SASmarkdown)
-if (file.exists("C:/Program Files/SASHome/SASFoundation/9.4/sas.exe")) {
-  saspath <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
-} else {
-  saspath <- "sas"
-}
+library(SASmarkdown)
+saspath <- find_sas()
 sasopts <- "-nosplash -ls 75"
-sas_collectcode()
+knitr::opts_chunk$set(engine.path=list(sas=saspath, sashtml=saspath, 
+                                       saslog=saspath, sashtmllog=saspath),
+                      engine.opts=list(sas=sasopts, sashtml=sasopts, 
+                                       saslog=sasopts, sashtmllog=sasopts),
+                      comment=NA)
 ```
 ## A Semantic Error.
 Semantic errors (typos etc.) cause SAS to return an error
@@ -36,13 +36,13 @@ SAS produces an ERROR.  (No output is produced.)
 
 Use chunk option \"error=TRUE\".
 
-    `r backtick```{r procmeans, engine="sas", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+    `r backtick```{sas procmeans, error=TRUE}
     proc means data=class;
     run;
     `r backtick```
 
 Which produces:
-```{r procmeans, engine="sas", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+```{sas procmeans, error=TRUE}
 proc means data=class;
 run;
 ```
@@ -50,7 +50,7 @@ run;
 Division by zero produces error flags within the DATA step, but does
 **not** cause SAS to return an error code when it finishes.  So even
 if we allow for errors, the \"sas\" engine gives us the usual output.
-```{r divzero, engine="sas", engine.path=saspath, engine.opts=sasopts, comment=""}
+```{sas divzero}
 data class;
     set sashelp.class(obs=5);
     age0 = age/0;
@@ -64,22 +64,22 @@ run;
 To see the DATA step ERROR, switch to the \"saslog\" engine.  Here the
 chunk option \"error\" is irrelevant.
 
-    `r backtick```{r divzero, engine="saslog", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+    `r backtick```{saslog divzero, error=TRUE}
     `r backtick```
 
 Producing both the log and the PROC PRINT output.
-```{r divzero, engine="saslog", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+```{saslog divzero, error=TRUE}
 ```
 
 ## Replicate in HTML.
 The semantic error, where we need chunk option \"error=TRUE\".  In this
 particular example, the **sas** and **sashtml** engines give us the
 same result, because there is no output produced by either.
-```{r procmeans, engine="sashtml", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+```{sashtml procmeans, error=TRUE}
 ```
 
 And the execution error, where the chunk option is irrelevant.  Using 
 the **sashtmllog** engine, we see both the DATA step errors and the
 HTML output.
-```{r divzero, engine="sashtmllog", engine.path=saspath, engine.opts=sasopts, comment="", error=TRUE}
+```{sashtmllog procmeans, error=TRUE}
 ```
