--- a/vignettes/saveSASfiles.rmd
+++ b/vignettes/saveSASfiles.rmd
@@ -6,7 +6,7 @@ output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Cleaning Up SAS Log Output}
   %\VignetteEngine{knitr::rmarkdown_notangle}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{UTF-8}
 ---
 ```{r backtick, echo=FALSE, results="hide"}
 backtick <- "`"
