--- a/vignettes/spinSASmarkdown.rmd
+++ b/vignettes/spinSASmarkdown.rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r backtick, echo=FALSE, results="hide"}
+```{r backtick, include=FALSE}
 backtick <- "`"
 ```
 `spinsas` is an alternative way of processing dynamic Markdown
